[tool.poetry]
name = "Italica"
version = "0.1.0"
description = ""
authors = ["Jerrin <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
openai = "^0.18.1"
myutils = "^0.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
